--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
 Любові і гармонії завжди!<br>
 Щоб Коля радував і пестив,<br>
 А Юніка не срала на коврі,<br>
-Щоб брат твій заковався, дуже сильно,<br>
-І став як ті степні Українськи орли!<br>
+Щоб все було у тебе добре,<br>
+І танцювала ти отак завжди!<br>
+Ми любимо тебе!
 </p>
 <svg class="icon-svg" width="100">
     <use href="./image/icon.svg#icon-icon-h"></use>
